# CoLa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: arg_parse.seq  basic_io.seq  cavlc.seq  comments.txt  config.seq  constants.seq  cost.seq  encoder.seq  flag_compute.seq  golomb.seq  intra.seq  parser_setup.seq  partition.seq  quantize.seq  rdo.seq  test.seq  transforms.seq  trav.seq  utils.seq  validate_config.seq
apps/raw_tables/: raw_tbl_to_blk.seq  tbl_9_10_raw.txt  tbl_9_10_raw.txt.seq  tbl_9_5_raw.txt  tbl_9_7_and_9_8_raw.txt  tbl_9_7_and_9_8_raw.txt.seq  tbl_9_9_b_raw.txt  tbl_9_9_b_raw.txt.seq
avc/: compute_JM_psnr.seq  constants.seq  cost.seq  encoder.seq  intra16x16.seq  intra4x4.seq  intra_chroma.seq  quantize.seq  transforms.seq
avc2/: basic_io.seq  cavlc.seq  cost.seq  encoder.cfg  encoder.seq  intra16x16.seq  intra4x4.seq  partition.seq  quantize.seq  run_cost.seq  times.txt
cola/compiler/: cola.cpp  cola.h
cola/frontend/: arg_parse.seq  bits.seq  block.seq  constants.seq  error.seq  flagtree.seq  lut.seq  multidim.seq  ptree.seq  ptree2.seq  scan.seq  slice.seq  test.seq  traversal.seq  tuple_opts.seq
cola/runtime/: main.cpp
encoder_attempt1/: config.seq  constants.seq  inter.seq  interpolation.seq  parser_setup.seq  partition.seq  test.seq
encoder_attempt1/raw_tables/: tbl_9_10_raw.txt.seq  tbl_9_5_raw.txt.seq  tbl_9_9_a_raw.txt  tbl_9_9_a_raw.txt.seq
encoder_attempt2/: constants.seq  parameter_sets.seq  syntax.seq
old/: syntax.seq
pseudo-avc/: basic_io.seq  cavlc.seq  config.seq  constants.seq  cost.seq  encoder.cfg  encoder.seq  golomb.seq  intra.seq  parameter_sets.seq  partition.seq  quantize.seq  structures.seq  transforms.seq  utils.seq
